fix(client): :lipstick: Fix issues with missing colors

--- a/client/src/scss/_colors.scss
+++ b/client/src/scss/_colors.scss
@@ -2,7 +2,9 @@
 $attention: #f9ef99;
 $bgfocus: #d2edfc;
 $bleuCharte: #0421b1;
+$blue: #0a54bf;
 $darkColor: #212121;
+$darkGrey: #5e5e5e;
 $darkOrange: #ea6206;
 $erreur: #ffcecb;
 $error: #f44336;
@@ -18,13 +20,18 @@ $gray70: #828282;
 $gray70b: #ababab;
 $gray80: #5e5e5e;
 $gray90: #212121;
+$green: #137f3a;
 $greenValidate: #bdf0c7;
+$grey2: #e0e0e0;
 $grey50b: #e0e0e0;
 $lightColor: #f2f2f2;
 $lightgreen: #def6c2;
+$lightGrey: #edebeb;
 $lightOrange: #ffe2b8;
 $lightYellow: #fff7ae;
 $orange: #ff9800;
+$orangeDark: #ea6206;
+$redDark: #b50437;
 $rouge: #e55039;
 $standby: #fdd497;
 $validation: #def6c2;
@@ -44,11 +51,13 @@ $darkBackgroundContrastGrey: #242424;
 $darkBackgroundElevationContrast: #2f2f2f;
 $darkBorderPlainError: #ff5655;
 
+// RI colors used in TypeScript
 :export {
-  // RI colors
   attention: $attention;
   bleuCharte: $bleuCharte;
+  blue: $blue;
   darkColor: $darkColor;
+  darkGrey: $darkGrey;
   darkOrange: $darkOrange;
   erreur: $erreur;
   error: $error;
@@ -58,17 +67,24 @@ $darkBorderPlainError: #ff5655;
   gray50: $gray50;
   gray60: $gray60;
   gray70: $gray70;
+  gray80: $gray80;
   gray90: $gray90;
+  green: $green;
+  grey2: $grey2;
   grey50b: $grey50b;
   lightBlue: $bgfocus;
   lightColor: $lightColor;
   lightgreen: $lightgreen;
+  lightGrey: $lightGrey;
   lightOrange: $lightOrange;
   lightYellow: $lightYellow;
   orange: $orange;
+  orangeDark: $orangeDark;
+  redDark: $redDark;
   rouge: $rouge;
   standby: $standby;
   validation: $validation;
+  validationDefault: $validationDefault;
   validationHover: $validationHover;
   vert: $vert;
   vert2: $vert2;
